# freya2.0.3

./: Makefile  Readme  Release_notes.txt  call_sequence_outline  filemap  recipe  setup
Earlier and changed versions/: events_messed up.cpp  events_withJfiks.cpp
Earlier and changed versions/Files needed til impement correct fragment ex_energy/: events_MINE_simplefix_needed_to_fix_ex.cpp  events_ORIGINAL_with_Jfiks.cpp
Earlier and changed versions/build_with_incorrect_fragment_ex_firstbuild_savedforsecurity/: CMakeCache.txt  Cf252_sf.dat.root  EventToRoot_compilable  EventToRoot_compilable.C  EventToRoot_compilable_fabio.C  Makefile  Pu240_n_1.dat.root  events  fission_script_root6.C  freya_root_analyzer.C  test
Earlier and changed versions/build_with_incorrect_fragment_ex_firstbuild_savedforsecurity/Event_output_files/: Pu239_n_0_5_10k.dat.root  Pu240_n_0_5_10k.dat.root  comparing_239_240  comparing_239_240 copy  history.res copy  o copy  pu240_test_sf.dat.root  pu240test_en.dat.root  test.c  y copy 13
FREYA-Report/: FREYA.bib  FREYA.bib.bak  FREYA_report_Dorthea_Gjestvang_Jam2018.aux  FREYA_report_Dorthea_Gjestvang_Jam2018.bbl  FREYA_report_Dorthea_Gjestvang_Jam2018.blg  FREYA_report_Dorthea_Gjestvang_Jam2018.out  FREYA_report_Dorthea_Gjestvang_Jam2018.run.xml  FREYA_report_Dorthea_Gjestvang_Jam2018.tex  document.aux  document.out  document.tex
Files needed til impement correct fragment ex_energy/: EX_msFREYA_event_ex_energy.F90  events_simplefix_needed_to_fix_ex.cpp
Spin_included/: events_Spintry.cpp  msFREYA_event_spintry.F90
data_freya/: Cf252sf.TKE-Af  Cf252sf.Y-Af  Cm244sf.TKE-Af  Cm244sf.Y-Af  Pu238sf.TKE-Af  Pu238sf.Y-Af  Pu240.TKE-Af  Pu240.dTKE  Pu240.xs  Pu240sf.TKE-Af  Pu240sf.Y-Af  Pu241.PreEq  Pu241.TKE-Af  Pu241.dTKE  Pu241.xs  Pu242.PreEq  Pu242.TKE-Af  Pu242.dTKE  Pu242sf.TKE-Af  Pu242sf.Y-Af  U234.TKE-Af  U234.dTKE  U234.xs  U236.PreEq  U236.TKE-Af  U236.dTKE  U238gf.TKE-Af  U238gf.Y-Af  U238sf.TKE-Af  U238sf.Y-Af  U239.PreEq  U239.TKE-Af  U239.dTKE  U239.xs
data_freya/Decays/: info.txt
g4lend/: CMakeLists.txt  Readme  fission.cc  recipe  test.mac
g4lend/include/: End.hh  G4FissionLibrary_new.hh  G4GammaLENDBuilder.hh  G4NeutronLLNLFissLENDBuilder.hh  LENDPhysicsList.hh  PrimaryGeneratorAction.hh  User.hh  options.hh
g4lend/src/: DetectorConstruction.cc  End.cc  G4FissLib_new.cc  G4FissionLibrary_new.cc  G4GammaLENDBuilder.cc  G4NeutronLLNLFissLENDBuilder.cc  LENDPhysicsList.cc  MultipleSource.cc  SingleSource.cc
geant/: CMakeLists.txt  Readme  test_nofreya.ref
geant/include/: G4FissLib_new.hh  G4FissionLibrary_new.hh  MultipleSource.hh  NeutronHPphysics.hh  PhysicsList.hh  SponFissIsotope.hh
geant/src/: G4FissionLibrary_new.cc  NeutronHPphysics.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  SponFissIsotope.cc
include/: Fission.h  Fission.inc  fissionEvent.h
lib/: libFission.dylib
plot/: U-232.gnuplot  U-232.txt  a_vs_eng.gnuplot  a_vs_eng.txt  binomial.c  nudist.gnuplot  nudistEngCons.gnuplot  nudistEngConsAllAct.gnuplot  photofissionNudist.gnuplot  photofissionSpec.gnuplot  spec.gnuplot  specEngCons.gnuplot  specEngConsAllAct.gnuplot  specEngConsAllActCorrelatedTotal.gnuplot  specEngConsAllActTotal.gnuplot  specEngConsCorrelatedTotal.gnuplot  specEngConsTotal.gnuplot  specFreya.gnuplot  specFreyaCorrelatedTotal.gnuplot  specFreyaTotal.gnuplot  spnudist.gnuplot  spspec.gnuplot  testspecFreya.gnuplot  testspecFreyaCorrelatedTotal.gnuplot  testspecFreyaTotal.gnuplot
regr/: check_bugs  run_test  run_test.csh  testEngCons  testEngCons.c  testEngConsAllActNudist.res  testEngConsAllActSpec.res  testEngConsAllActSpecTotal.res  testEngConsAllActTotal.goldref  testEngConsAllActinides  testEngConsAllActinides.c  testEngConsNudist.goldref  testEngConsSpec.goldref  testEngConsSpecTotal.res  testEngConsTotal.goldref  testFreya  testFreya.c  testFreyaNuDist.goldref  testFreyaSpec.goldref  testFreyaSpecTotal.goldref  testFreyaTotal.goldref  testFreya_bug1.c  testNuDist  testNuDist.c  testNuDist.goldref  testPhotofission  testPhotofission.c  testSpNuDist  testSpNuDist.c  testSpNuDist.res  testSpspec.goldref  testspec.res
sample_codes/: Readme
sample_codes/angular_correlation_c/plot/: angular_correlation.gnu
sample_codes/angular_correlation_c/src/: CMakeLists.txt  angular_correlation.c
sample_codes/angular_correlation_cpp/src/: CMakeLists.txt  angular_correlation.cpp
sample_codes/events/: input
sample_codes/events/Files_Jorgen/: README
sample_codes/events/src/: CMakeLists.txt  events.cpp  events_orginal.cpp  events_original.cpp  events_redigert8_jan.cpp
sample_codes/fission_neutron_spectra/src/: CMakeLists.txt  fission_neutron_spectra.cpp
sample_codes/gamma_vs_Af/src/: CMakeLists.txt  gamma_vs_Af.cpp
sample_codes/nu_distribution/src/: CMakeLists.txt  nu_dist.cpp
src/: CMakeLists.txt  COPYRIGHT.TXT  COPYRIGHT_FORTRAN.TXT  COPYRIGHT_FREYA.TXT  Fission.cc  Readme  Recipe_mcnpx.txt  SmpFreya.cc  SmpGEng.cc  SmpIsoDir.cc  SmpNEngCf252.cc  SmpNPEnergyCons.cc  SmpNVel.cc  SmpNuDistDataPu239.cc  SmpNuDistDataPu239_241.cc  SmpNuDistDataPu239_241_MC.cc  SmpNuDistDataU232_234_236_238.cc  SmpNuDistDataU232_234_236_238_MC.cc  SmpNuDistDataU233_235.cc  SmpNuDistDataU233_235_MC.cc  SmpNuDistDataU235.cc  SmpNuDistDataU238.cc  SmpNugDist.cc  SmpPVel.cc  SmpSpNuDistData.cc  SmpSpNubarData.cc  SmpSpNugDistData.cc  SmpSpWatt.cc  SmpTerrell.cc  SmpWatt.cc  allocateMem.cc  erf.cc  fissionEvent.cc  fissionerr.cc  getNSepEng.cc  getNubarg.cc  getTotEngN.cc  getTotEngNEnergyCons.cc  getTotEngNEnergyConsAllActinides.cc  getTotEngP.cc  (+10 more)
tex/fission/: History  Makefile  arg.tex  cog.tex  fission.tex  fission_geant.tex  fission_geant_bib.tex  fission_geant_toslac.tex  geant4.tex  h4.sty  implementation.tex  interface.tex  mcnpx.tex  photofission.tex  physics.tex  snippet.tex  usermanual.tex  usermanual_bib.tex
tex/ieee09_poster/: Makefile  ieee_abstract.tex  ieee_abstract_bib.tex
tex/macros/: Makefile  h4.sty  h4fullpage.sty
tex/photofission/: Freya.tex  Readme  h4.sty  h4fullpage.sty  llnl_proposed_photofission.tex  physics.sty
(+31 files in other folders)
